--- a/client/src/shared/config/locales/en/en.json
+++ b/client/src/shared/config/locales/en/en.json
@@ -62,7 +62,10 @@
       }
     },
     "categories": {
-      "deleteCategoryTitle": "Are you sure you want to delete this category?"
+      "deleteCategoryTitle": "Are you sure you want to delete this category?",
+      "newCategoryTitle": "New Category",
+      "editCategoryTitle": "Edit Category",
+      "createCategory": "Create"
     },
     "placeholders": {
       "password": "Password",
@@ -77,7 +80,8 @@
       "incomeName": "Income name",
       "expenseName": "Expense name",
       "incomeValue": "Income value",
-      "expenseValue": "Expense value"
+      "expenseValue": "Expense value",
+      "categoryName": "Category name"
     },
     "schemaMessages": {},
     "toastMessages": {
@@ -110,6 +114,14 @@
         "removeExpenseSuccess": "Expense deleted successfully!",
         "removeIncomeError": "Error when deleting income.",
         "removeExpenseError": "Error when deleting expense."
+      },
+      "categories": {
+        "createCategorySuccess": "Category created successfully!",
+        "createCategoryError": "Error when creating category.",
+        "deleteCategorySuccess": "Category deleted successfully!",
+        "deleteCategoryError": "Error when deleting category.",
+        "editCategorySuccess": "Category edited successfully!",
+        "editCategoryError": "Error when editing category."
       }
     }
   }
